--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,12 @@ body {
   --secondary-title-color: #434455;
   --accent-color: #4d5ae5;
   --hero-footer-backgroud-color: #2e2f42;
+  --hero-title-color: #ffffff;
+  --team-background-color: #f4f4fd;
+  --footer-desc-color: #e7e9fc;
+  --logo-web-color: #4d5ae5;
+  --logo-footer-studio-color: #f4f4fd;
+  --logo-header-studio-color: #2e2f42;
 }
 /* ---------------- header styles--------------- */
 .header {
@@ -25,11 +31,11 @@ body {
   line-height: 1.33;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: var(--logo-header-studio-color);
   text-decoration: none;
 }
 .header-logo-span {
-  color: #4d5ae5;
+  color: var(--logo-web-color);
 }
 .header-logo:hover,
 .header-logo:focus {
@@ -46,6 +52,7 @@ body {
 }
 .header-list-link:hover,
 .header-list-link:focus {
+  color: #404bbf;
 }
 .header-address {
   font-style: normal;
@@ -60,6 +67,7 @@ body {
 }
 .header-address-link:hover,
 .header-address-linl:focus {
+  color: #404bbf;
 }
 /* ------------- portfolio page main styles--------------- */
 .portfolio {
@@ -121,14 +129,14 @@ body {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #f4f4fd;
+  color: var(--logo-footer-studio-color);
   text-decoration: none;
 }
 .footer-logo-span {
-  color: #4d5ae5;
+  color: var(--logo-web-color);
 }
 .footer-desc {
-  color: #e7e9fc;
+  color: var(--footer-desc-color);
 }
 /* --------main page hero section styles----------------------- */
 .hero {
@@ -139,10 +147,9 @@ body {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  color: var(--hero-title-color);
 }
-.hero-btn:hover,
-.hero-btn:focus {
+.hero-btn {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
@@ -152,6 +159,11 @@ body {
   cursor: pointer;
   background-color: #4d5ae5;
 }
+.hero-btn:hover,
+.hero-btn:focus {
+  background-color: #404bbf;
+}
+
 /* ---------main page philosophy section styles------------------ */
 .philosophy {
 }
